All times are in UTC.

Nov 9th PU2 (Peter) - Didn't change much, just refreshed the entire webpage and changed a live view of the End of Term Project to a download of a zip file. Planning to add 3 buttons to the webpage.
Nov 9th PU4 (Peter) - Fixed some bugs, PU2 had a LOT of bugs including classes suddenly working. Everything should be working now!
Nov 9th PU5 (Peter) - Attempt at fixing some bugs
Nov 9th PU6 (Peter) - Attempt de finale at fixing some bugs

Nov 9th Cls1 (Peter) - JFoucus 2 Build
Nov 9th Cls2 (Peter) - JFoucus 2 Build
Nov 9th Cls3 (Peter) - JFoucus 2 Bug Fix

Nov 10th MT1 (Peter) - Maintinence Update

Thanks for taking your time to read the change log! 
Have a nice day! :)